# retrospective-service

./: .env  Cargo.toml  README.md  Rocket.toml  request.http
deployment/: docker-compose.yml
deployment/apisix/: apisix.yaml  config.yaml
deployment/container/: container-compose.yml
deployment/container/keycloak/: dev-realm.json  keycloak-setup.sh
deployment/keycloak/: dev_realm.json
private/: ca_cert.pem  ca_key.pem  gen_certs.sh  rsa_sha256_cert.pem  rsa_sha256_key.pem
src/api/: Cargo.toml
src/api/src/: auth.rs  main.rs
src/common/: Cargo.toml
src/common/src/: audit.rs  event.rs  lib.rs
src/module/retrospective/: Cargo.toml
src/module/retrospective/src/: lib.rs
src/module/retrospective/src/domain/: board.rs  card.rs  mod.rs
