[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
dotenv_codegen = "0.15"
actix-web = "4.1"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
retrospective = { path = "../module/retrospective" }
oauth2 = "4.2.0"