[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retrospective = { path = "../module/retrospective" }

rocket = { version = "0.5.0-rc.2", features = ["serde_json"] }

env_logger = "0.9"

uuid = { version = "1.0.0", features = ["v4", "serde"] }
serde = { version = "1.0.137", features = ["derive", "serde_derive"] }
serde_json = "1.0"

base64 = "0.13"
